# discord-emoji-selfbot

./: .gitignore  pyproject.toml
src/emojibot/: __init__.py  bot.py  main.py
tests/: mock_bot.py  mock_test.py  pattern_match_test.py
